--- a/example/ios/PitchDetectorExample/Info.plist
+++ b/example/ios/PitchDetectorExample/Info.plist
@@ -43,6 +43,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+  <key>NSMicrophoneUsageDescription</key>
+   <string>Perform pitch detection</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
