--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@evilmartians/lefthook": "^1.2.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
@@ -78,7 +78,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-permissions": "*"
   },
   "engines": {
     "node": ">= 16.0.0"
@@ -156,5 +157,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "react-native-permissions": "^3.8.0"
   }
 }
