chore: add documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,9 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "website"
+  ]
 }
