--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,48 +1,46 @@
-name: CI
+name: Check Code Quality
+
 on:
   push:
-    branches:
-      - main
+    branches: [main, develop]
   pull_request:
-    branches:
-      - main
+    branches: [main, develop]
 
 jobs:
-  lint:
+  lint-and-tests:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Git checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Setup
-        uses: ./.github/actions/setup
+    - name: Use Node.js Version 16.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.14.x
 
-      - name: Lint files
-        run: yarn lint
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
 
-      - name: Typecheck files
-        run: yarn typecheck
+    - name: Type check
+      run: yarn typecheck
 
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Lint
+      run: yarn lint
 
-      - name: Setup
-        uses: ./.github/actions/setup
+    - name: Check circular dependencies
+      run: yarn circular
 
-      - name: Run unit tests
-        run: yarn test --maxWorkers=2 --coverage
+    - name: Run Jest Unit Tests
+      run: yarn test
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Typescript build
+      run: yarn build
 
-      - name: Setup
-        uses: ./.github/actions/setup
-
-      - name: Build package
-        run: yarn prepack
+    - name: SonarCloud Scan Typescript
+      run: yarn sonar
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
