fix: broken links

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       run: yarn test
 
     - name: Typescript build
-      run: yarn build
+      run: yarn prepack
 
     - name: SonarCloud Scan Typescript
       run: yarn sonar
