--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native": "0.71.5",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
+    "sonar-scanner": "^3.1.0",
     "typescript": "^4.5.2"
   },
   "resolutions": {
