--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-pitch-detector",
   "version": "0.1.0",
-  "description": "test",
+  "description": "High performance real time pitch detection.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -25,7 +25,7 @@
     "android"
   ],
   "repository": "https://github.com/1fabiopereira/react-native-pitch-detector",
-  "author": "Fábio Pereira <fabio.pereira.gti@gmail.com> (https://github.com/1fabiopereira)",
+  "author": "Fábio Pereira (https://github.com/1fabiopereira)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/1fabiopereira/react-native-pitch-detector/issues"
