fix: fix android react-native dependency

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,8 +74,9 @@ dependencies {
   implementation ("com.jtransc:jtransc-rt:0.6.7")
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
+  // implementation ("com.facebook.react:react-android:$version")
   //noinspection GradleDynamicVersion
-  implementation ("com.facebook.react:react-android:$version")
+  implementation ("com.facebook.react:react-native:+")
 
   //noinspection GradleDependency
   implementation ("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
