fix: update CI to trigger for master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Check Code Quality
 
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [main, master, develop]
   push:
-    branches: [main]
+    branches: [main, master]
 
 jobs:
   lint-and-tests:
