fix: sonar configs

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.projectName=react-native-pitch-detector
 sonar.sourceEncoding=UTF-8
 sonar.inclusions=src/**
 sonar.exclusions=**/__mocks__/**,**/__tests__/**,**/*.test.ts,**/*.test.tsx
+sonar.typescript.tsconfigPath=tsconfig.json
 sonar.javascript.lcov.reportPaths="coverage/lcov.info"
